--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-      <app-card></app-card>
+      <!--app-card></app-card-->
+      <!--app-pere></app-pere-->
+   
+<app-perecomp></app-perecomp>
 </div>
