updated in bransh

--- a/src/app/Components/filscomp/filscomp.component.html
+++ b/src/app/Components/filscomp/filscomp.component.html
@@ -1,5 +1,5 @@
 <div [style.background-color]="'lightblue'">
-
+<p>je suis dans div fils</p>
 <p>my favorite color : {{myFavoriteColor}} </p>
 <button
 (click)="changecolor()"
