--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
       <!--app-card></app-card-->
       <!--app-pere></app-pere-->
    
-<app-perecomp></app-perecomp>
+   <app-cv></app-cv>
+<!--app-perecomp></app-perecomp-->
 </div>
